	* include/nuttx/usb/usb.h: Can't use 'class' as a field name in USB structures.
	  This upsets C++ if usb.h is included. 'class' -> 'classid' in this header
	  file and all places that referenced 'class'
	* drivers/usbdev/usbmsc.c: Fixed some backward conditional compilation.
	* sched/on_exit.c:  Add support for the on_exit() function.,
	* sched/exit.c, task_exithook.c, task_delete.c, sched_releasetcb.c:  Move
	  the logic that closes file descriptors sooner in the task shutdown sequence.
	  When drivers are closed, they may need to do things that require a fully
	  up-and-running task.  Some things cannot be done later when the task is
	  crippled.
	* lib/dirent: Moved readdir_r() and telldir() from lib/misc to this new
	  directory where they belong.
	* lib/termios.  Implemented tcsetattr() and tcgetattr().
	* lib/stdio/lib_fgets.c:  The old fgets includes some terminal related
	  functionality:  It handles VT-100 commands, includes a command line editor
	  and echo characters back to the terminal.  This old, overloaded fgets()
	  was renamed readline() and moved to apps/system/readline.  The version
	  of fgets() in lib/stdio was them simplified and stripped down so that it
	  *only* gets a string -- as its description implies.
	* arch/arm/src/lpc214x/lpc214x_usbdev.c:  Add corrections suggested by
	  David Hewson many, many months ago.
	* configs/mcu123-lpc214x/composite and configs/mcu123-lpc214x/src/up_composite.c:
	  Add a configuration to test the USB composite device.
	* configs/stm3240g-eval/telnetd:  Add a configuration for testing the
	  Telnet daemon.
	* configs/stm3240g-eval/nsh2:  This is another NSH configuration.  It differs
	  from the original nsh configuration because it does not have an RS-232
	  console (only a Telnet console) and SDIO is enabled.  This configuration is
	  required because the STM3240G-EVAL board cannot simultaneously support
	  RS-232 and SDIO due to pin conflicts.
	* lib/string/strcasestr.c:  Add strcasestr().
