@@ -133,6 +133,7 @@ EXTERN int    ungetc(int c, FAR FILE *stream);
 EXTERN int    vprintf(FAR const char *format, va_list ap);
 EXTERN int    vfprintf(FAR FILE *stream, const char *format, va_list ap);
 EXTERN int    vsprintf(FAR char *buf, const char *format, va_list ap);
+EXTERN int    avsprintf(FAR char **ptr, const char *fmt, va_list ap);
 EXTERN int    vsnprintf(FAR char *buf, size_t size, const char *format, va_list ap);
 EXTERN int    vsscanf(char *buf, const char *s, va_list ap);
 
